syntax = "proto3";

package rewiseDom;

message CldrLangs {
  repeated CldrLang langs = 1;
}

message CldrLang {
  string id = 1; // e.g. cs-CZ, sr-Latn, 1 for invariant locale
  string lang = 2;
  string script_id = 3; // unicode script, e.g. Latn, Arab etc.
  string default_region = 4;
  bool has_more_scripts = 5;
  bool has_stemming = 6;
  string alphabet = 7;
  string alphabetUpper = 8;
  // repeated string regions = 7; // other regions for given <id>
  // int64 LCID = 8;
  // string stemmer_class = 9;
  // string breaker_class = 10;
  // bool is_euro_talk = 11;
  // bool is_goethe = 12;
  // bool is_lingea = 13;
  // string google_trans_id = 14;
}

message UncRange {
  int32 start = 1;
  int32 end = 2;
  int32 idx = 3;
}

message UncBlocks {
  repeated string ISO15924 = 1;
  repeated UncRange ranges = 2;
}
